test/tests/compiler/13_floating-point_numbers/invalid_types/complement_double.plx
pub fn main(none) i32 {
    #  You can't take the bitwise complement of a double 
    d: f64 = ~10.0
    return 0
}
